Fixed mobile where wrap bar for closing element in covid modal was still showing. Also fixed the text box that was causing a weird loayout shift because of height auto

--- a/css/covidmodal.css
+++ b/css/covidmodal.css
@@ -177,10 +177,12 @@ body.noScroll{
         display:block;
         position: fixed;
         top:0;
+        left:0;
         background:var(--primary-clr) url(../photos/large/so-white.png);
         background-blend-mode: multiply;
         height:50px;
-        width:100%;
+        width:0%;
+        transition: all 1s ease-in-out;
     }
     .menu_close{
       top:25px;
