--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,8 @@
     grid-area: 6 / 1 / 13 / 13;
     height:100%;
     width:100%;
-    background:var(--secondary-clr) url(../photos/large/papyrus.png);
+    background: url(../photos/large/papyrus.png);
+    background-color:var(--secondary-clr) ;
     background-blend-mode: multiply;
 }
 /*==Cards Container==*/
@@ -123,7 +124,9 @@
 .cards{
     width:480px;
     height:660px;
-    background:var(--primary-clr) url(../photos/large/so-white.png);
+    background: url(../photos/large/so-white.png);
+    background-color: var(--primary-clr);
+    background-blend-mode: multiply;
     border-radius:10px;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,.3);
     overflow: hidden;
@@ -175,7 +178,9 @@
     width:100%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,.3);
-    background:var(--primary-clr) url(../photos/large/so-white.png);
+    background: url(../photos/large/so-white.png);
+    background-color: var(--primary-clr);
+    background-blend-mode: multiply;
     overflow: hidden;
     display:flex;
     flex-flow:column wrap;
@@ -402,7 +407,8 @@
         width:100%;
         height:auto;
         padding:10% 0px; 
-        background:var(--primary-clr) url(photos/large/so-white.png);
+        background: url(../photos/large/so-white.png);
+        background-color:var(--primary-clr);
         background-blend-mode: multiply;
         filter:drop-shadow(0px 0px 10px rgba(0,0,0,.4));
     }
@@ -543,6 +549,17 @@
         margin-top:1em ;
         width:160px;
         height:40px;
+    }
+    .text_box{
+        height:40%;
+        padding:1em;
+    }
+    .text_box h2{
+        font-size: 2.5em;
+        height:70px;
+    }
+    .text_box p{
+        font-size:1em;
     }
     .donate_section h2{
         font-size: 1.5em;
